Add some basic unmarshaling code
