# actions/api/admin/sync/sheet.go
@@ -44,3 +44,25 @@ func Initialize(c buffalo.Context) error {
 		Sheet: sheet,
 	}))
 }
+
+// Export dumps the user and group state to the stored data sheet
+//
+// swagger:route POST /api/v1/admin/sync/dump admin dumpSync
+// Returns a google sheet reference.
+// responses:
+//   200: adminSyncSheetResponse
+//	 400: errorResponse
+//	 401: errorResponse
+//	 403: errorResponse
+//	 422: errorResponse
+//	 500: errorResponse
+func Export(c buffalo.Context) error {
+	sheet := settings.Sheet()
+	err := sync.DumpToSpreadsheet(sheet)
+	if err != nil {
+		return c.Error(http.StatusInternalServerError, err)
+	}
+	return c.Render(http.StatusOK, render.JSON(&SheetResponsePayload{
+		Sheet: sheet,
+	}))
+}
